stock fix
